--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "readme-generator",
   "version": "1.0.0",
-  "description": "",
+  "description": "Creates a readme in markdown language for any project.",
   "main": "index.js",
   "type": "module",
   "scripts": {
