--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
   "author": "Jacob Garland",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "8.2.4"
-  }
+    "inquirer": "^12.0.1"
+  },
 }
